# fe-rfid

./: .gitignore  README.md  generate_sample.py  pyproject.toml  rfid_cli.py
arduino/RFIDReader/: RFIDReader.ino
krystallium/: samples.py
rfid/: RFIDController.py  RFIDDevice.py  __init__.py
